--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "modular-subroute-example",
-  "version": "1.0.0",
+  "name": "@penx/modular-subroute-example",
+  "version": "0.0.1",
   "description": "modular-subroute-example React component",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -27,11 +27,20 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
   },
-  "author": "",
-  "homepage": "",
-  "license": "MIT",
-  "repository": "",
+  "author": "Alasdair McLeay",
+  "homepage": "https://github.com/penx/modular-subroute-example#readme",
+  "license": "ISC",
   "keywords": [
     "react-component"
-  ]
+  ],
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/penx/modular-subroute-example.git"
+  },
+  "bugs": {
+    "url": "https://github.com/penx/modular-subroute-example/issues"
+  }
 }
