--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "devDependencies": {
     "nwb": "0.21.x",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-router": "^4.2.0"
   },
   "author": "Alasdair McLeay",
   "homepage": "https://github.com/penx/modular-subroute-example#readme",
