--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
   "dependencies": {},
   "peerDependencies": {
     "react": "16.x",
-    "react-router": "4.x"
+    "react-router": "4.x",
+    "react-router-dom": "4.x"
   },
   "devDependencies": {
     "nwb": "0.21.x",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router": "^4.2.0"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.0"
   },
   "author": "Alasdair McLeay",
   "homepage": "https://github.com/penx/modular-subroute-example#readme",
